Exposing more buttons for testing errors.

--- a/pokemon.client/src/app/app.component.html
+++ b/pokemon.client/src/app/app.component.html
@@ -20,7 +20,13 @@
     </div>
 
     <button (click)="generateNewStatistics()">Generate</button>
-    <button (click)="testError()">Test Error</button>
+    
+</div>
+
+<div class="tournament-controls error-buttons">
+    <button (click)="testErrorOne()">Test Error 1</button>
+    <button (click)="testErrorTwo()">Test Error 2</button>
+    <button (click)="testErrorThree()">Test Error 3</button>
 </div>
   
 @if(generating) {
