--- a/pokemon.client/src/app/app.component.css
+++ b/pokemon.client/src/app/app.component.css
@@ -51,3 +51,12 @@ table {
     background-color:rgba(255, 0.2, 0.2, 0.2);
     border-radius:5px;
 }
+
+.error-buttons {
+    margin-top:20px;
+}
+
+.error-buttons button {
+    margin-left:5px;
+    margin-right:5px;
+}
